<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title">Lift Maintenance</string>
    <string name="app_name">Lift Maintenance</string>
    <string name="bCheckList">Check List</string>
    <string name="incidents">Incidents</string>
    <string name="maintenance">Maintenance</string>
    <string name="settings">Settings</string>
    <string name="sync">Synchronize</string>
    <string name="login">Login :</string>
    <string name="password">Password :</string>
    <string name="url">URL :</string>
    <string name="database">Data Base :</string>
    <string name="frequency">Frequency :</string>
    <string name="validate">Validate</string>
    <string name="freqHelp">Synchronize in minutes</string>
    <string name="title_refused">Not Connected !!</string>
    <string name="msg_refused">Bad Login or Password for this Data Base</string>
    <string name="title_badurl">Not Connected!!</string>
    <string name="msg_badurl">Bad URL or Data Base name</string>
    <string name="title_error">Error</string>
    <string name="msg_error">Unable to connect on Server</string>
    <string name="positiveButton">Ok</string>
    <string name="no_value_error">Please check OpenERP value for this field</string>
    <string name="callDateLabel">Call Date :</string>
    <string name="bToExecute">Execute</string>
    <string name="bToWait">Wait</string>
    <string name="bToStop">Stop</string>
    <string name="bToBeDone">Done</string>
    <string name="cbCable">Cable</string>
    <string name="cbParachute">Parachute</string>
    <string name="bValSig">Validate</string>
    <string name="deadlineDate">Dead Line date : </string>
    <string name="draft">Draft</string>
    <string name="considering">Considering</string>
    <string name="waiting">Waiting</string>
    <string name="progress">In Progress</string>
    <string name="done">Done</string>
    <string name="stop">Stop</string>
    <string name="SelectChapter">Select a chapter</string>
    <string name="SelectLocalization">Select a Localization</string>
    <string name="SelectCause">Select a cause</string>
    <string name="UnknownContact">Not communicated contact</string>
    <string name="Call">Call</string>
    <string name="bToRestart">Restart</string>
    <string name="StartService">Service is started</string>
    <string name="BeginSync">Begin Sync</string>
    <string name="SyncOf"       >Synchro of     |\tDel\t|\tIns\t|\tUpd|\n</string>
    <string name="SyncCheckList">Check List     |\t%1$d\t|\t%2$d\t|\t%3$d\t|\n</string>
    <string name="SyncCheckLine">Check Line     |\t%1$d\t|\t%2$d\t|\t%3$d\t|\n</string>
    <string name="SyncCodif"    >Codifications  |\t%1$d\t|\t%2$d\t|\t%3$d\t|\n</string>
	<string name="SyncMachine"  >Machines       |\t%1$d\t|\t%2$d\t|\t%3$d\t|\n</string>
	<string name="SyncInterv"   >Interventions  |\t%1$d\t|\t%2$d\t|\t%3$d\t|\n</string>
	<string name="allrigths">Open Solutis Services 2011 All Rights Reserved</string>
	<string name="allready_sync">Synchronization already in progress</string>
	<string name="labSector">Sector :</string>
	<string name="labDept">Departement :</string>
	<string name="labCity">City :</string>
	<string name="labMachineAddress">Address :</string>
	<string name="labMachineName">Name :</string>
	<string name="first">st</string>
	<string name="second">nd</string>
	<string name="third">rd</string>
	<string name="authers">th</string>
	<string name="labInfos">Informations :</string>
	<string name="labIndex">Index :</string>
	<string name="labContract">Contract N° :</string>
	<string name="labType">Machine Type :</string>
	<string name="L">Lift</string>
    <string name="H">Hoist</string>
    <string name="CL">Car Lift</string>
    <string name="DL">Disable Lift</string>
    <string name="P">Platform</string>
    <string name="BP">Barrier/portal</string>
    <string name="O">Others</string>
    <string name="labLast">Last Maintenance</string>
    <string name="labNext">Next Maintenance</string>
    <string name="enddemo">End Sync</string>
    <string name="newUserTitle">New User</string>
    <string name="newUserMessage">Do you want to delete old user\'s interventions ?</string>
    <string name="synchroWaitTitle">Please Wait</string>
    <string name="synchroNewWaitMessage">Delete old and synchronise new interventions, it will takes several minutes.</string>
    <string name="synchroManWaitMessage">Synchronise informations, it will takes several minutes.</string>
    <string name="Yes">Yes</string>
    <string name="Cancel">Cancel</string>
    <string name="No">No</string>
    <string name="NA">NA</string>
    <string name="cantEditSetting">Can\'t eddit settings, synchronisation in progress</string>
    <string name="UpdateMessage">There is a new version of this application, do you want to update it?</string>
    <string name="UpdateTitle">Update Founded</string>
</resources>