<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bglift"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvMachineName"
        style="@style/interLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Machine Name" />

    <TextView
        android:id="@+id/tvMachineAdresse"
        style="@style/interLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:text="Machine Adresse" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvDateLabel"
            style="@style/interLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/callDateLabel"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/tvDate"
            style="@style/interLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="date"
            android:textColor="#ffffff" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvInfo"
        style="@style/interLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Infos" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/cbCable"
            style="@style/interLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cbCable" />

        <CheckBox
            android:id="@+id/cbParachute"
            style="@style/interLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cbParachute" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bToExecute"
            style="@style/ButtonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_purple"
            android:text="@string/bToExecute" />

        <Button
            android:id="@+id/bToWait"
            style="@style/ButtonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_yellow"
            android:text="@string/bToWait" />

        <Button
            android:id="@+id/bToStop"
            style="@style/ButtonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_red"
            android:text="@string/bToStop" />

        <Button
            android:id="@+id/bToBeDone"
            style="@style/ButtonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_green"
            android:text="@string/bToBeDone" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvState"
        style="@style/interLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="state"
        android:textColor="#ffffff" />

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/tvAllRights"
        style="@style/allRightsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allrigths" />

</LinearLayout>